Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-10907

MTR and server writes can interleave in the error log

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 5.5(EOL), 10.0(EOL), 10.1(EOL), 10.2(EOL)
    • 5.5.53
    • Platform Windows, Tests
    • None

    Description

      mtr writes to the server error log to mark current test.
      Server writes to its error log at the same time.

      On Windows, these writes can interleave, since appends to the log file are not atomic.
      Sometimes, some lines from server get lost. Sometimes some lines from mtr get lost
      This confuses MTR.

      An example output from
      http://buildbot.askmonty.org/buildbot/builders/win32-debug/builds/1117/steps/test/logs/mysqld.1.err.3
      showing mtr overwriting server output

      CURRENT_TEST: main.flush_block_commit_notembedded
      d/sql//Debug/mysqld.exe (root[root] @ localhost [::1]): Normal shutdown

      Attachments

        Activity

          There are no comments yet on this issue.

          People

            wlad Vladislav Vaintroub
            wlad Vladislav Vaintroub
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Git Integration

                Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.