MDEV-10907 MTR and server writes can interleave in the error log

Ensure atomic appends to the error log by using CreateFile with
FILE_APPEND_DATA flag to open error log file (both MTR and server)